--- a/app/views/frontpage/_blindness_image.html.haml
+++ b/app/views/frontpage/_blindness_image.html.haml
@@ -1,4 +1,4 @@
-.row.text-center
+.text-center
   = link_to 'http://blindness.icewhistle.com/' do
     = image_tag post.image.url(:wide)
     .inner_text
