--- a/app/assets/stylesheets/icewhistle.css.scss
+++ b/app/assets/stylesheets/icewhistle.css.scss
@@ -352,23 +352,26 @@ a.readmore-js-toggle {
   -ms-filter: "progid:DXImageTransform.Microsoft.dropshadow(OffX=0, OffY=0, Color='#255255255')";
 
   width: 100%;
-  padding: 20px 0px;
-  .row {
-    width: 900px;
-    .inner_text {
-      margin-left: 15px;
-      color: white;
-      font-weight: 300;
-      position: absolute;
-      top: 35px;
-      font-size: 30px;
-      font-size: 2.8rem;
-      line-height: 40px;
-      background-color: #333;
-      background-color: rgba(90, 90, 90, 0.6);
-      padding: 5px;
-    }
+  padding: 0px;
+
+  .inner_text {
+    margin-left: 15px;
+    color: white;
+    font-weight: 300;
+    position: absolute;
+    top: 35px;
+    font-size: 30px;
+    font-size: 2.8rem;
+    line-height: 40px;
+    background-color: #333;
+    background-color: rgba(90, 90, 90, 0.6);
+    padding: 5px;
   }
+
+}
+.orbit-bullets-container {display: none;}
+h3.subheading {
+  line-height: 2.1rem;
 }
 
 .post_content {
@@ -376,6 +379,7 @@ a.readmore-js-toggle {
 }
 
 #recent_posts, #less_recent, .posts {
+  padding: 3.25rem 0 1.5rem 0;
   p {
 
    font-size: 1rem;
