--- a/app/views/frontpage/_full_width_post.html.haml
+++ b/app/views/frontpage/_full_width_post.html.haml
@@ -5,14 +5,14 @@
     = image_tag post.image.url
   - else
     .row    
-      .small-10.medium-7.columns.small-centered.post_with_topspace= image_tag post.image.url
+      .small-10.medium-9.large-7.columns.small-centered.post_with_topspace= image_tag post.image.url
 - elsif !post.photos.empty?
   %ul{:"data-orbit" => ""}
     - post.photos.each do |p|
       %li
         = image_tag p.filename.url
 .row    
-  .small-10.medium-7.columns.small-centered.post_content
+  .small-10.medium-.large-7.columns.small-centered.post_content
     %h2.subheader= link_to raw(post.title), post
     %medium.date= l post.updated_at, :format => :long
     .post_body.text-justify.readmore
@@ -32,7 +32,8 @@
   .row
     .small-12.columns
       - post.videos.each do |video|
-        %video{src: video.url}
+        .videocontent
+          %video{src: video.url, style: "width: 100%; height: 100%", width: "100%", height: "100%"}
       = content_for :jquery do
         :plain
           $('video,audio').mediaelementplayer({defaultVideoWidth: "100%"});        
