major videop fix

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -14,6 +14,15 @@
         - if @post.extended?
           %br/
           = raw @post.extended
+        - unless @post.videos.empty?
+          - @post.videos.each do |video|
+            .videocontent
+              %video{src: video.url, style: "width: 100%; height: 100%", width: "100%", height: "100%"}
+
+          = content_for :jquery do
+            :plain
+              $('video,audio').mediaelementplayer({defaultVideoWidth: "100%"});   
+          
       .small-4.small-offset-1.columns.sidebar= render :partial => 'post_sidebar'
         
 
@@ -28,6 +37,15 @@
         - if @post.extended?
           %br/
           = raw @post.extended
+        - unless @post.videos.empty?
+          - @post.videos.each do |video|
+            .videocontent
+              %video{src: video.url, style: "width: 100%; height: 100%", width: "100%", height: "100%"}
+
+          = content_for :jquery do
+            :plain
+              $('video,audio').mediaelementplayer({defaultVideoWidth: "100%"});   
+                        
       .small-4.small-offset-1.columns.sidebar= render :partial => 'post_sidebar'
   -else
     .row
@@ -54,22 +72,12 @@
           = raw @post.extended
         - unless @post.videos.empty?
           - @post.videos.each do |video|
-            .videocontainer
-              %video{style: "width: 100%; height: 100%", width: "100%", height: "100%" , src: video.url}
+            .videocontent
+              %video{src: video.url, style: "width: 100%; height: 100%", width: "100%", height: "100%"}
 
           = content_for :jquery do
             :plain
-              $('video,audio').mediaelementplayer({defaultVideoWidth: "100%",
-                    flashStreamer: "rtmp://170.93.143.150/rtplive/000109f6004b00a6004af03676235daa",
-                            plugins: ['flash', 'silverlight'],
-                            alwaysShowControls: false,
-                            success: function (mediaElement, domObject) {
-                                if (mediaElement.pluginType == 'flash') {
-                                    mediaElement.play();
-                                }
-                            },
-                        }
-                );
+              $('video,audio').mediaelementplayer({defaultVideoWidth: "100%"});   
               
       .small-4.small-offset-1.columns.sidebar{:"data-equalizer-watch" => ""}= render :partial => 'post_sidebar'
 
