--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -69,7 +69,7 @@
                 %li= link_to 'All posts', posts_path
                 %li= link_to 'Blindness', 'http://blindness.icewhistle.com/'
                 %li= link_to 'Crumbles', crumbles_path
-                %li= link_to 'Bookmarks', 'http://icewhistle.postach.io'
+                %li= link_to 'Bookmarks', 'https://www.evernote.com/pub/johnwfail/bookmarks'
             %li.scale.optional= link_to image_tag( 'icewhistle_combined.png'), '/'
 
             
