--- a/app/views/frontpage/_bookmark.html.haml
+++ b/app/views/frontpage/_bookmark.html.haml
@@ -2,7 +2,7 @@
   .row.bookmarks
     .small-2.columns 
       %h4.subheading Recently bookmarked:
-      = link_to "All bookmarks", 'http://icewhistle.postach.io/',:class => [:button, :tiny]
+      = link_to "All bookmarks", 'https://www.evernote.com/pub/johnwfail/bookmarks/',:class => [:button, :tiny]
     .small-10.columns.text-left.bookmark_list
       %span.bookmark.first= link_to raw(link[0].title), link[0].link_url
       = " / "
