add linebreak hopefully to fix ipad

--- a/app/views/frontpage/_full_width_post.html.haml
+++ b/app/views/frontpage/_full_width_post.html.haml
@@ -21,6 +21,7 @@
         - post.audiopodcasts.each do |podcast|
           .audiocontent
             %audio{src: podcast.url, style: "width: 100%; height: 100%", width: "100%", height: "100%"}
+      %br{clear: :all}
       = raw post.body      
       - if post.extended
         = link_to 'Read more', post, :class => [:button, :tiny]
