new podcast in manual feed

--- a/app/views/frontpage/_full_width_post.html.haml
+++ b/app/views/frontpage/_full_width_post.html.haml
@@ -44,7 +44,7 @@
   = content_for :jquery do
     :plain
       //if ((navigator.platform.indexOf("iPhone") == -1) && (navigator.platform.indexOf("iPad") == -1)) {
-        $('video,audio').mediaelementplayer({defaultVideoWidth: "100%"});        
+        $('video,audio').mediaelementplayer({defaultVideoWidth: "100%", alwaysShowHours: true});        
       //}
 /
 / - if post.photos.empty?
