static pages for services

--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -2966,6 +2966,9 @@
 		.wrapper.style5 {
 			background-color: #ffffff;
 			color: #4E4852;
+      &.page {
+        opacity: 0.84;
+      }
 		}
 
 			.wrapper.style5 strong, .wrapper.style5 b {
