--- a/app/views/layouts/services.html.haml
+++ b/app/views/layouts/services.html.haml
@@ -6,16 +6,27 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title SI Services
+    = display_meta_tags :site => 'SI Services' 
     %meta{:charset => "utf-8"}/
     %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
     /[if lte IE 8] <script src="assets/js/ie/html5shiv.js"></script>
     = stylesheet_link_tag    "services"
+    = javascript_include_tag "services" 
     /[if lte IE 8] <link rel="stylesheet" href="assets/css/ie8.css" />
     /[if lte IE 9] <link rel="stylesheet" href="assets/css/ie9.css" />
+    = csrf_meta_tags
+    - unless user_signed_in?
+      :javascript
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-8528342-1', 'auto');
+        ga('send', 'pageview');    
   %body.landing
     / Page Wrapper
-    #page-wrapper
+    #page-wrapper{style: @page.nil? ? false : 'background-image:  url("' + @page.image.url(:main) + '");'}
       / Header
       %header#header.alt
         %h1= link_to 'SI Services', '/'
@@ -26,131 +37,14 @@
                 %span Menu
               #menu
                 %ul
-                  %li
-                    %a{:href => "index.html"} Home
-                  %li
-                    %a{:href => "generic.html"} Generic
-                  %li
-                    %a{:href => "elements.html"} Elements
-                  %li
-                    %a{:href => "#"} Sign Up
-                  %li
-                    %a{:href => "#"} Log In
-      / Banner
-      %section#banner
-        .inner
-          %h2 SI Services
-          %p
-            The 
-            %em Serious Introspection
-            %br/
-            experience, brought to your
-            %br/
-            event by our specialised team.
+                  %li= link_to 'Home', '/'
+                  %li= link_to 'The host', page_path('the-host')
+                  %li= link_to 'Hype man', page_path('hype-man')
+                  %li= link_to 'Media specialist', page_path('media-specialist')
+                  %li= link_to 'Pricing', page_path('pricing')
+                  %li= link_to 'Contact', 'mailto:john(@)ptarmigan(dot)(two-letter-country-code-for-finland)'
+      = yield
 
-          %ul.actions
-            %li
-              %a.button.special{:href => "#"} GET SERIOUS
-        %a.more.scrolly{:href => "#one"} Learn More
-      / One
-      %section#one.wrapper.style1.special
-        .inner
-          %header.major
-            %h2
-              What we do best.
-              %br/
-              Brought to your events & activities.
-            %p
-              Our three-man team provides a full-fledged experience to spice up
-              %br/
-              your parties, weddings, bar mitzvahs or other activities.
-          %ul.icons.major
-            %li
-              %span.icon.fa-microphone.major.style1
-                %span.label Hosting
-            %li
-              %span.icon.fa-heart-o.major.style2
-                %span.label Hype
-            %li          
-              %span.icon.fa-code.major.style3
-                %span.label Media
-      / Two
-      %section#two.wrapper.alt.style2
-        %section.spotlight
-          .image
-            %img{:alt => "", :src => "/assets/services/jwf.jpg"}/
-          .content
-            %h2
-              The Host
-
-            %p John W. Fail adds an inviting, welcoming presence to your event. He does interviews, karaoke, panel moderating and more with warmth, grace and humility.
-        %section.spotlight
-          .image
-            %img{:alt => "", :src => "/assets/services/jtt.jpg"}/
-          .content
-            %h2
-              The Hype Man
-
-            %p Canada's brightest export, Justin Tyter Tate, delivers the hype and so much more. He'll energise your audience and enliven your staff!
-        %section.spotlight
-          .image
-            %img{:alt => "", :src => "/assets/services/ernest.jpg"}/
-          .content
-            %h2
-              The Media Specialist
-
-            %p Ernest Truely brings a lengthy career in the media arts to SI-Services, where he will live tweet your event, post-process visual documentation, and otherwise augment reality.
-      / Three
-      %section#four.wrapper.style4
-        .inner
-          %header.major
-            %h2 See for yourself!
-            %p All episode of Serious Introspection are available to watch online.
-            %video{controls: '', height: '100%', style: 'width: 100%; height: 100%', width: '100%'}
-              %source{ src: 'https://s3-eu-west-1.amazonaws.com/icewhistle-content/serious_introspection/s01e05.mp4'}
-                  
-      %section#three.wrapper.style3.special
-        .inner
-          %header.major
-            %h2 Introspective testimonials
-            %p
-              The SI-Services team leaves a trail of satisfaction wherever we go. Through
-              %br/
-              our weekly live show, we have built a dedicated group of fans and followers.
-          %ul.features
-            %li
-              .icon_box= image_tag 'services/mikko.jpg'
-              .testimonial
-                %h3 Mikko Laajola
-                %p "my favorite part of the week ... Great talk show in Ihana Baari, Suvilahti ...i am serious about this. i really enjoy listening to your serious introspections."
-            %li
-              .icon_box= image_tag 'services/toni.png'
-              .testimonial
-                %h3 Toni Ledentsa
-                %p "Appreciating these community feels. :) Hopefully this develops further."
-            %li
-              .icon_box= image_tag 'services/heidi.jpg'
-              .testimonial
-                %h3 Heidi Backström
-                %p "... hauska ..."
-            %li
-              .icon_box= image_tag 'services/annika.jpg'
-              .testimonial
-                %h3 Annika Tudeer
-                %p "This is just such a cool show! Thank you John W. Fail."
-              
-
-      / CTA
-      %section#cta.wrapper.style4
-        .inner
-          %header
-            %h2 Take the plunge!
-            %p Basic pricing starts at 45€/hour, with special packages tailored to your request.
-          %ul.actions.vertical
-            %li
-              %a.button.fit.special{:href => "#"} CONTACT
-            %li
-              %a.button.fit{:href => "#"} Learn More
       / Footer
       %footer#footer
         %ul.icons
@@ -170,10 +64,9 @@
             %a.icon.fa-envelope-o{:href => "#"}
               %span.label Email
         %ul.copyright
-          %li © Untitled
+          %li © Serious Introspection Services, an enterprise of John W. Fail t:mi.
           %li
-            Design:
-            %a{:href => "http://html5up.net"} HTML5 UP
+            Y-tunnus: 2277894-8
     / Scripts
     %script{:src => "assets/js/jquery.min.js"}
     %script{:src => "assets/js/jquery.scrollex.min.js"}
