--- a/app/views/frontpage/services.html.haml
+++ b/app/views/frontpage/services.html.haml
@@ -52,7 +52,7 @@
       %h2
         The Hype Man
 
-      %p Canada's brightest export, Justin Tyter Tate, delivers the hype and so much more. He'll energise your audience and enliven your staff!
+      %p Canada's brightest export, Justin Tyler Tate, delivers the hype and so much more. He'll energise your audience and enliven your staff!
   %section.spotlight
     .image
       %img{:alt => "", :src => "/assets/services/ernest.jpg"}/
