--- a/app/views/layouts/services.html.haml
+++ b/app/views/layouts/services.html.haml
@@ -26,7 +26,7 @@
         ga('send', 'pageview');    
   %body.landing
     / Page Wrapper
-    #page-wrapper{style: @page.nil? ? false : 'background-image:  url("' + @page.image.url(:main) + '");'}
+    #page-wrapper{style: @page.nil? ? (@message.nil? ? false : 'background-image: url("/assets/services/stein.jpg");') : 'background-image:  url("' + @page.image.url(:main) + '");'}
       / Header
       %header#header.alt
         %h1= link_to 'SI Services', '/'
@@ -42,7 +42,7 @@
                   %li= link_to 'Hype man', page_path('hype-man')
                   %li= link_to 'Media specialist', page_path('media-specialist')
                   %li= link_to 'Pricing', page_path('pricing')
-                  %li= link_to 'Contact', 'mailto:john(@)ptarmigan(dot)(two-letter-country-code-for-finland)'
+                  %li= link_to 'Contact', '/contact'
       = yield
 
       / Footer
@@ -55,13 +55,10 @@
             %a.icon.fa-facebook{:href => "https://www.facebook.com/seriousintrospectionwithjohnwfail/"}
               %span.label Facebook
           %li
-            %a.icon.fa-instagram{:href => "#"}
-              %span.label Instagram
+            %a.icon.fa-github{:href => "http://github.com/cenotaph"}
+              %span.label GitHub
           %li
-            %a.icon.fa-dribbble{:href => "#"}
-              %span.label Dribbble
-          %li
-            %a.icon.fa-envelope-o{:href => "#"}
+            %a.icon.fa-envelope-o{:href => "/contact"}
               %span.label Email
         %ul.copyright
           %li © Serious Introspection Services, an enterprise of John W. Fail t:mi.
