--- a/app/views/frontpage/services.html.haml
+++ b/app/views/frontpage/services.html.haml
@@ -69,10 +69,10 @@
   .inner
     %header.major
       %h2 See for yourself!
-      %p All episode of Serious Introspection are available to watch online.
+      %p All episodes of Serious Introspection are available to watch online.
       %video{controls: '', height: '100%', style: 'width: 100%; height: 100%', width: '100%'}
         %source{ src: 'https://s3-eu-west-1.amazonaws.com/icewhistle-content/serious_introspection/s01e05.mp4'}
-            
+      %p= link_to 'See all episodes....', 'http://johnw.fail/tags/serious%20introspection'
 %section#three.wrapper.style3.special
   .inner
     %header.major
