--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -8,6 +8,10 @@
   .row
     .small-3.columns= f.input :published
   .row
-    .small-6.columns= f.input :image
+    .small-6.columns
+      - unless f.object.new_record?
+        - unless f.object.blank?
+          = image_tag f.object.image.url(:midsize)
+      = f.input :image
   .row
     .small-2.columns= f.submit 'Save', :class => [:button, :round]
