--- a/app/views/contact/services.html.haml
+++ b/app/views/contact/services.html.haml
@@ -16,7 +16,7 @@
           %p
             %label{:for => "email"} Your email address:
             %small.error A valid email address is required.
-            = form.text_field :email,  :required => "", :pattern => "[a-zA-Z]+"
+            = form.text_field :email,  :required => ""
           %p
             %label{:for => "subject"} Subject:
             %small.error You must enter a subject.
