--- a/app/views/crumbles/_crumble_sidebar.html.haml
+++ b/app/views/crumbles/_crumble_sidebar.html.haml
@@ -18,4 +18,4 @@
 - if current_user
   = link_to 'edit this crumble', edit_crumble_path(@crumble)
   %br
-  = link_to 'delete this crumble', @crumble, :confirm => 'Are you sure?', :method => :delete
+  = link_to 'delete this crumble', @crumble, :method => :delete, data: {confirm: 'are you sure?'}
