--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -3418,6 +3418,7 @@
 		-ms-justify-content: center;
 		justify-content: center;
 		cursor: default;
+    height: 30em;
 		height: 100vh;
 		min-height: 35em;
 		overflow: hidden;
